--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
           </li>
         </div>
         <div id="meetTeam"></div>
+        <div>
         <h3>Interviews</h3>
         <p>
           <span class="team-description">These individuals kindly shared their stories and knowledge regarding their experiences as environmental and social justice advocates, allowing us to accurately craft this project.</span>
