changed interviews in btn

--- a/index.html
+++ b/index.html
@@ -129,28 +129,16 @@
           <li>
             <button id="meetTheTeamButton" type="button" onclick="meetThe('designers')">The 3D Designers</button>
           </li>
+          <li>
+            <button id="meetTheTeamButton" type="button" onclick="meetThe('interviews')">The Interviews</button>
+          </li>
         </div>
-        <div id="meetTeam"></div>
-        <h3>Interviews</h3>
-        <p>
-          <span class="team-description">These individuals kindly shared their stories and knowledge regarding their experiences as environmental and social justice advocates, allowing us to accurately craft this project.</span>
-          <ul class="list-items">
-            <li>Maxi Cohen</li>
-            <li>Dioganhdih</li>
-            <li>Lou Harris</li>
-            <li>Sto Len</li>
-            <li>Amber Payne</li>
-            <li>Saylor Pochan</li>
-            <li>Rayner Ramirez</li>
-            <li>Rachel Shragis</li>
-          </ul>
-        </p>
+        <div id="meetTeam"></div> 
       </div>
+
       <footer>
         <a href="/" target="_blank">Play TrashTalk on itch.io</a>
         <p>© TrashTalk, 2020. Go Green!</p>
       </footer>
-
-
   </body>
 </html>
