changed styling of btns

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div id="hero">
         <div id="hero-text">
           <h1>TrashTalk: A VR Exploratorium</h1>
-          <button id="play-btn">Play Game</button>
+          <button class="web-btn">Play Game</button>
         </div>
       </div>
 
@@ -79,25 +79,25 @@
       <div id="videoSliderNav">
         <ul id="videoNav">
           <li>
-            <button id="videoButton"
+            <button class="web-btn"
               onclick="getVideoUrl('https://player.vimeo.com/video/470055878')">
-              Future Justice
+              The Future
             </button>
           </li>
           <li>
-            <button id="videoButton"
+            <button class="web-btn"
               onclick="getVideoUrl('https://player.vimeo.com/video/474506646')">
-              Climate Justice - The Present
+              The Present
             </button>
           </li>
           <li>
-            <button id="videoButton"
+            <button class="web-btn"
               onclick="getVideoUrl('https://www.youtube.com/embed/_ka--wpVilA')">
               The Solution
             </button>
           </li>
           <li>
-            <button id="videoButton"
+            <button class="web-btn"
               onclick="getVideoUrl('https://player.vimeo.com/video/478016711')">
               The Problem
             </button>
@@ -118,19 +118,19 @@
         </p>
         <div id="meetTheTeam">
           <li>
-            <button id="meetTheTeamButton" type="button" onclick="meetThe('soundTeam')">The Sound Designers</button>
+            <button class="web-btn" type="button" onclick="meetThe('soundTeam')">Sound Designers</button>
           </li>
           <li>
-            <button id="meetTheTeamButton" type="button" onclick="meetThe('productManagers')">The Product Managers</button>
+            <button class="web-btn" type="button" onclick="meetThe('productManagers')">Product Managers</button>
           </li>
           <li>
-            <button id="meetTheTeamButton" type="button" onclick="meetThe('programmers')">The Programmers</button>
+            <button class="web-btn" type="button" onclick="meetThe('programmers')">Programmers</button>
           </li>
           <li>
-            <button id="meetTheTeamButton" type="button" onclick="meetThe('designers')">The 3D Designers</button>
+            <button class="web-btn" type="button" onclick="meetThe('designers')">3D Designers</button>
           </li>
           <li>
-            <button id="meetTheTeamButton" type="button" onclick="meetThe('interviews')">The Interviews</button>
+            <button class="web-btn" type="button" onclick="meetThe('interviews')">Interviews</button>
           </li>
         </div>
         <div id="meetTeam"></div> 
