fix btn padding

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div id="hero">
         <div id="hero-text">
           <h1>TrashTalk: A VR Exploratorium</h1>
-          <button class="web-btn">Play Game</button>
+          <button type="button" class="web-btn">Play Game</button>
         </div>
       </div>
 
