--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script type="text/javascript" src="./js/index.js"></script>
   </head>
   <body>
-
       <header>
         <nav>
           <ul>
@@ -30,7 +29,11 @@
       <div id="hero">
         <div id="hero-text">
           <h1>TrashTalk: A VR Exploratorium</h1>
-          <button type="button" class="web-btn">Play Game</button>
+          <button type="button" class="web-btn">
+            <a href="https://trashtalkvr.itch.io/trashtalk">
+              Play Game
+            </a>
+          </button>
         </div>
       </div>
 
@@ -133,11 +136,11 @@
             <button class="web-btn" type="button" onclick="meetThe('interviews')">Interviews</button>
           </li>
         </div>
-        <div id="meetTeam"></div> 
+        <div id="meetTeam"></div>
       </div>
 
       <footer>
-        <a href="/" target="_blank">Play TrashTalk on itch.io</a>
+        <a href="https://trashtalkvr.itch.io/trashtalk">Play TrashTalk on itch.io</a>
         <p>© TrashTalk, 2020. Go Green!</p>
       </footer>
   </body>
