added itch io links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div id="hero">
         <div id="hero-text">
           <h1>TrashTalk: A VR Exploratorium</h1>
-          <button type="button" class="web-btn">Play Game</button>
+          <a href="https://trashtalkvr.itch.io/trashtalk" target="_blank"><button type="button" class="web-btn">Play Game</button></a>
         </div>
       </div>
 
@@ -137,7 +137,7 @@
       </div>
 
       <footer>
-        <a href="/" target="_blank">Play TrashTalk on itch.io</a>
+        <a href="https://trashtalkvr.itch.io/trashtalk" target="_blank">Play TrashTalk on itch.io</a>
         <p>© TrashTalk, 2020. Go Green!</p>
       </footer>
   </body>
