edited content in interviews and about

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           Ksel’s Fall 2020 Technical Production course centered around
           Climate Justice on a global and local scale. The game was made for PC/VR
           devices and is intended to spread awareness of climate change with the
-          participation of those currently fighting against the economic and
-          social justice systems.
+          participation of those currently fighting for economic and
+          social justice in Rockaway Beach, Jamaica Bay Wildlife Preserve and the boroughs of New York City.
         </p>
         <hr />
         <h3>Gameplay and Instructions</h3>
